--- a/style.css
+++ b/style.css
@@ -8,7 +8,8 @@
 
 #buttonsWnumbers {
     display: flex;
-    flex-direction: column;    
+    flex-direction: column; 
+    margin: auto;   
 }
 
 button {
